force-app/main/default/objects/Master_Funding_Type__c/Master_Funding_Type__c.object-meta.xml
<CustomObject>
    <description>Master data funding</description>
    <label>Master Funding Type</label>
    <nameField>
        <label>Master Funding Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Funding Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>