force-app/main/default/objects/Master_Funding_Type__c/fields/Is_Other__c.field-meta.xml
<CustomField>
    <fullName>Is_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Del] Is Other</label>
    <type>Checkbox</type>
</CustomField>