force-app/main/default/objects/Master_Funding_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Split Funding</fullName>
            </value>
            <value>
                <fullName>Pocket Funding</fullName>
            </value>
            <value>
                <fullName>Non Funding</fullName>
            </value>
            <value>
                <fullName>Pocket</fullName>
                <isActive>false</isActive>
                <label>Pocket</label>
            </value>
            <value>
                <fullName>Split</fullName>
                <isActive>false</isActive>
                <label>Split</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>